Bug Fix: error message has align:center

--- a/css/default.css
+++ b/css/default.css
@@ -38,7 +38,6 @@ button{
 	color: #FA3E3E;
 	text-align: center;
 	margin-top: 3%;
-	margin-left: 20%;
 }
 .successMessage{
 	color: #74DF00;
